<resources>
    <string name="app_name">AnyTravel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstfragment">FirstFragment</string>
    <string name="main">Главная</string>
    <string name="travellers">Поездки</string>
    <string name="Me">Я</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb224454612232598</string>
    <string name="facebook_application_id" translatable="false">224454612232598</string>
    <string name="inbox">Входящие</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="eas">eas</string>
    <string name="profile">Посмотрите свой профиль</string>
    <string name="info">Добавьте информацию о себе и фотографию</string>
    <string name="enter">Войти</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Зарегестрироваться</string>
    <string name="login">Уже зарегестрировались? Войдите здесь</string>
    <string name="Reg"><![CDATA[Не зарегестрировались? Зарегеструрейтесь здесь<]]></string>
    <string name="sreg">Приветствуем! Вы успешно зарегестрировались</string>
    <string name="createnewaccount">Создать новый аккаунт</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterpass">Enter password</string>
    <string name="agreement">Я соглашаюсь со всеми правилами пользования и соглашениями</string>
    <string name="next">Продолжить</string>
    <string name="Profile">Профиль</string>
    <string name="regtour">Введите количество человек, которые хотят зарегестрироваться на тур</string>
    <string name="tr">Бронирования и поездки</string>
    <string name="trav">Поездки</string>
    <string name="exit">Выход</string>
    <string name="nm">Имя компании</string>
    <string name="nme">Название тура</string>
    <string name="dat">Дата</string>
    <string name="quan">Осталось мест :</string>
    <string name="price">Цена</string>
    <string name="size">Макс кол-во людей</string>
    <string name="numb">Номер телефона</string>
    <string name="descp">Описание тура</string>
    <string name="go">Хочу Поехать</string>
    <string name="тгь">Введите номер телефона</string>
    <string name="not">Нет доступных туров</string>
    <string name="sdf">Восстановить</string>
    <string name="erm">Введите email</string>
    <string name="send">Отправить</string>
    <string name="e">Введите email</string>
    <string name="pas">Введите пароль</string>
    <string name="pass">Забыли пароль?</string>
    <string name="enr">Войти</string>
    <string name="forget">Нету аккаунта? Зарегестрируйтесь здесь</string>
    <string name="bn">Введите своё имя</string>
    <string name="vd">Редактировать профиль</string>
    <string name="sfd">Введите свой город</string>
    <string name="cvx">Начать виртуальный тур</string>
    <string name="gdf">Введите номер телефона</string>
    <string name="cv">Отмена</string>
    <string name="dg">Сохранить</string>
    <string name="sdg">Город проживания</string>
    <string name="sdgw">Введите ваш город</string>
    <string name="s">Отображаемое имя</string>
    <string name="d">Введите ваше имя</string>
    <string name="dc">Номер телефона</string>
    <string name="fg">Введите номер телефона</string>
    <string name="q">Регистрация</string>
    <string name="qe2">Введите логин</string>
    <string name="qa">Введите пароль</string>
    <string name="xc">Подтвердите пароль</string>
    <string name="vnb">Введите полное имя</string>
    <string name="tyh">Введите номер телефона</string>
    <string name="ok">Продолжить</string>
    <string name="mn">Параметры</string>
    <string name="c">Предпочтения</string>
    <string name="cvb">Язык</string>
    <string name="nbv">Уведомления</string>
    <string name="as">Бронирования и платежы</string>
    <string name="vb">Варианты оплаты</string>
    <string name="cvs">Выход</string>
    <string name="df">Конфиденциальность</string>
    <string name="sfda">Название тура</string>
    <string name="cxvz">Дата</string>
    <string name="qaz">Стоимость</string>
    <string name="weq">Размер группы</string>
    <string name="qw">Связь</string>
    <string name="qds">Описание</string>
    <string name="qdw">Отменить тур</string>
    <string name="vxc">Название тура</string>
    <string name="qsa">Дата</string>
    <string name="qwsac">Стоимость</string>
    <string name="adsfv">Размер группы</string>
    <string name="fsdv">Связь</string>
    <string name="sdfcv">Описание</string>
</resources>