<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/RegTourImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline52"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/RegCompanyNameTv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorHalfGray"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textIsSelectable="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/RegTourImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline77" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline52">

            <TextView
                android:id="@+id/RegTourNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sfda" />

            <TextView
                android:id="@+id/RegDateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cxvz" />

            <TextView
                android:id="@+id/RegPriceTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qaz" />

            <TextView
                android:id="@+id/RegPeopleSizeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weq" />

            <TextView
                android:id="@+id/RegPhoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qw" />

            <TextView
                android:id="@+id/RegDescriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qds" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53" />


        <Button
            android:id="@+id/cancelTourBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/qdw"
            android:textColor="@color/colorRed"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


