<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tourImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline52"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/companyNameTv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorHalfGray"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textIsSelectable="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tourImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline77" />

        <LinearLayout
            android:id="@+id/contentMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline52">

            <TextView
                android:id="@+id/tourNameTv"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vxc" />

            <TextView
                android:id="@+id/dateTv"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qsa" />

            <TextView
                android:id="@+id/priceTv"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qwsac" />

            <TextView
                android:id="@+id/peopleSizeTv"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adsfv" />

            <TextView
                android:id="@+id/phoneTv"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fsdv" />

            <TextView
                android:id="@+id/descriptionTv"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sdfcv" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53" />

        <ImageView
            android:id="@+id/likeIm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/companyNameTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toStartOf="@+id/tourImage"
            app:layout_constraintTop_toTopOf="@+id/tourImage"
            app:layout_constraintVertical_bias="0.08"
            app:srcCompat="@drawable/like" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


