<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/settingsTb"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#41AE83"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Параметры"
                    android:textColor="#131212"
                    android:textSize="24sp" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/prefTv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box2"
                android:gravity="fill"
                android:padding="12dp"
                android:text="@string/tr"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/favourLt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prefTv6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="fill"
                    android:padding="12dp"
                    android:text="@string/trav"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/prefTv7"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/colorGray"
                android:gravity="fill"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/exitTv"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/box"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="#41AE83"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prefTv9"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/colorGray"
                android:gravity="fill"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>